# 3D-Data-Processing-HWs

./: .gitignore  CMakeLists.txt  README.md
3DP Lab3/: CMakeLists.txt  registration_trial.cpp
3DP Lab3/data/bunny/: target.ply
3DP Lab3/data/dragon/: source.ply
3DP Lab3/data/vase/: source.ply
3DP Lab3/src/: Registration.cpp  Registration.h
3DP_Lab3/data/bunny/: source.ply
3DP_Lab3/data/dragon/: target.ply
3DP_Lab3/data/vase/: target.ply
3DP_Lab3/src/: Registration.cpp
3DP_lab_1/SGM/: Makefile  ReadMe.md  main.cpp  sgm  sgm.cpp  sgm.h
3DP_lab_2/3DP_lab_2/: README.txt
3DP_lab_2/3DP_lab_2/datasets/: data1.txt
3DP_lab_2/3DP_lab_2/results/: cloud2.ply  data2.txt
3DP_lab_2/3DP_lab_2/src/: basic_sfm.cpp  basic_sfm.h  features_matcher.cpp
3DP_lab_4/: TinyPointNet_Point_Cloud_3D_Descriptors.ipynb
